# orchestrator-vs-blackboard

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run.bat  run.command  run.sh
.claude/: launch.json
.github/workflows/: ci.yml
cassettes/: demo.json
demos/: _bootstrap.py  benchmark.py  run_blackboard.py  run_orchestrator.py
docs/: EXAMPLE.md  HANDOVER.md  HARNESS.md  IMPROVEMENTS.md  PAPER-PLAN.md  PLAN.md  PUBLISH-TO-MEDIUM.md  RESEARCH.md  TEACHING.md  WHEN-TO-USE.md  architecture.md  linkedin-post.md  medium-post-paste.html  medium-post.md
examples/: demo.html  report.html
ovb/: __init__.py  agents.py  blackboard.py  instrumentation.py  llm.py  orchestrator.py  task.py  viz.py
src/ovb/: __init__.py  cli.py  config.py  contracts.py  dotenv.py  pricing.py
src/ovb/core/: __init__.py  bedrock.py  gate.py  harness.py  llm.py  registry.py  state.py  trace.py
src/ovb/domain/: __init__.py  agents.py  task.py
src/ovb/engines/: __init__.py  blackboard.py  hybrid.py  orchestrator.py
src/ovb/eval/: __init__.py  compare.py  runner.py
src/ovb/viz/: __init__.py  live.py  report.py
src/ovb/viz/static/: app.js  index.html  style.css
tests/: test_live.py  test_smoke.py
