[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ovb"
version = "0.4.2"
description = "Orchestrator vs Blackboard vs Hybrid — three agent-harness topologies over identical agents, instrumented for real token/cost/latency"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ali Saadat" }]
keywords = ["multi-agent", "llm", "orchestrator", "blackboard", "harness", "agentic", "control-model"]
dependencies = [
  "pydantic>=2.6",   # typed shared state + reducers + validated events
  "typer>=0.12",     # CLI
]

[project.urls]
Homepage = "https://github.com/ali-saadat/orchestrator-vs-blackboard"
Repository = "https://github.com/ali-saadat/orchestrator-vs-blackboard"

[project.optional-dependencies]
real = ["anthropic>=0.42"]                 # --real: live streaming Claude calls
web  = ["fastapi>=0.110", "sse-starlette>=2", "uvicorn>=0.29"]  # live dashboard backend
otel = ["opentelemetry-sdk>=1.25"]         # OTLP export of the event stream
dev  = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
ovb = "ovb.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ovb = ["viz/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
